# Glass_Notes

./: Desktop_template.xml  LICENSE  README.md  ScourFan.Glassnotes.yaml  ScourFan.Glassnotes_0.1.2.0_x64__8ksetagtyhryj.msix  ScourFan.Glassnotes_0.1.2.0_x64__8ksetagtyhryj_1.msix  ScourFan.Glassnotes_0.1.2.0_x64__8ksetagtyhryj_template.xml  package-lock.json  privacy.md
glass-notes/: mycert.pfx
glass-notes/codesigning/: glassnotecert.pem  glassnotescert.pfx  glassnoteskey.pem
glass-notes/src/: index.html  language.js  main.js  markdown.js  marked.esm.js  notefunc.js  package-lock.json  package.json  styles.css  vite.config.mjs
glass-notes/src-tauri/: Cargo.toml  tauri.conf.json
glass-notes/src-tauri/capabilities/: default.json
ssh/: id_ed25519  id_ed25519.pub
sticky-notes/: package-lock.json  package.json  vite.config.js
sticky-notes/src/: index.html  language.js  main.js  markdown.js  package-lock.json  package.json  styles.css  vite.config.mjs
sticky-notes/src-tauri/: 2  Cargo.toml  tauri.conf.json
sticky-notes/src-tauri/capabilities/: default.json
sticky-notes/src-tauri/icons/: icon.icns
sticky-notes/src-tauri/src/: main.rs
test/: afdfsf.txt  asd.txt  ewq.txt  sadasd.txt  ssl.txt
