[package]
name = "glass_notes"
version = "0.1.2"
description = "A bunch of sticky notes paste on a ground glass"
authors = ["Scour Fan"]
edition = "2021"

[lib]
name = "glass_notes_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2.0.0"
tauri-plugin-global-shortcut = "2.0.0"
tauri-plugin-dialog = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-fs = "2"
fs = "0.0.5"
dialog = "0.3.0"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"

[profile.release]
panic= "abort"
codegen-units = 1
